<resources>
    <string name="app_name">TicTacToe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_button">Reset</string>
    <string name="play_tictactoe">Play TicTacToe</string>
    <string name="player_2">Player 2:</string>
    <string name="player_1">Player 1:</string>
    <string name="name_text">name</string>
</resources>
