<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameBoardFragment">


    <TextView
        android:id="@+id/statustext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="365dp"
        android:layout_height="343dp"
        android:background="@android:color/black"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statustext">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/field0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/field1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_weight="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/field2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/field3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:layout_weight="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/field4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginBottom="8sp"
                android:layout_weight="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/field5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:layout_weight="1"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/field6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/field7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_weight="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/field8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:hint="@string/name_text"
        app:layout_constraintBottom_toTopOf="@+id/player2_name_textview"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <TextView
        android:id="@+id/player2_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_text"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/player1_name_textview"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/player1_name_textview" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="20dp"
        android:text="@string/player_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="56dp"
        android:text="@string/player_2"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>